@@ -1,3 +1,10 @@
+2005-10-13  Vincent Noel <vnoel@cox.net>
+
+	* log_repaint.c: (tree_path_find_row),
+	(handle_selection_changed_cb):
+	* logview.c: (save_session), (main):
+	* logview.h: Cleanups.
+
 2005-10-13  noel  <vnoel@cox.net>
 
 	* log_repaint.c (iterate_thru_children): Removed. Whee !
